--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="menu_next_week">Следующая неделя</string>
     <string name="menu_abbrev">Сокращать</string>
     <string name="title_activity_schedule2">Schedule2</string>
+    <string name="title_activity_main2">Main2Activity</string>
 </resources>
